@@ -23,6 +23,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Allow moderators to exempt sessions from the idle timeout. This ability can be disabled by server owners. Thanks Bluestrings for suggesting.
  * Feature: Show proper reasons when a session is terminated, rather than always claiming the server is shutting down.
  * Feature: Allow specifying a reason when terminating a session manually.
+ * Fix: Squash whitespace in session listings to prevent funky display. Thanks yeen for reporting.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
